package ar.utn.ba.ddsi.models.entities;

public enum EstadoSolicitud {
    PENDIENTE,
    ACEPTADA,
    SUGERIDO_A_CAMBIO,
    RECHAZADA,
    ACEPTADA_CON_SUGERENCIA,
    RECHAZADA_POR_SPAM,
    RECHAZADA_POR_FALTA_DE_CARACTERES
}