@startuml

class Hecho{
- id: Long
- título: String
- descripción: String
- categoría: Categoria
- contenidosMultimedia: List<ContenidoMultimedia>
- origen: OrigenHecho
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDateTime
- fechaDeCarga: LocalDateTime
- fechaUltimaActualizacion: LocalDateTime
- eliminado: boolean
- contribuyente: Contribuyente
- idExterno: String
- revisado: boolean
- municipio: Municipio
- solicitudesDeEliminacion: List<SolicitudDeEliminacion>
- etiquetas: HashSet<Etiqueta>
--
+ solicitarEliminacion (String justificacion, Contribuyente contribuyente): SolicitudDeEliminacion
+ etiquetar (Etiqueta etiqueta): void
+ perteneceAlaFuente (String fuente): boolean
+ hechoIgualA (Hecho otroHecho): boolean
+ mismoTituloDiferentesAtributos (Hecho otroHecho): boolean
+ getProvincia(): Provincia
}

enum OrigenHecho{
CARGA_MANUAL
CONTRIBUYENTE
DATASET
PROXY
}

class Categoria{
- id: Long
- nombre: String
- sinonimos: List<String>
--
+ addSinonimo(String palabra): void
+ esLaMisma(String otraCategoria): boolean
+ esSimilarSegunLevenshtein(String b): boolean
}

class Etiqueta{
- id: Long
- nombre: String
}

class Coleccion{
- id: Long
- identificador: String
- titulo: String
- descripcion: String
- criterioDePertenencia: Criterio
- algoritmoDeConsenso: AlgoritmoDeConsenso
- fuentes: List<String>
- hechosCargadosManualmente: List<Hecho>
- hechosConsensuados: List<Hecho>
- hechos: List<Hecho>
--
+ contiene (Hecho hecho): boolean
+ aplicarFiltros(List<Hecho> hechos): List<Hecho>
+ filtrarHechosPropios (List<Hecho> hechos): void
+ agregarTandaDeHechos(List<Hecho> tanda): void
+ removerHechoEliminado(Hecho hecho): void
+ removerHecho(Hecho hecho): void
+ consensuarHechos(): void
}

class SolicitudDeEliminacionBuilder{
- CANT_MINIMA_DE_CARACTERES = 500;
- descripcion: String
- hecho: Hecho
- fechaDeCarga: LocalDateTime
- solicitante: Contribuyente
- estado: EstadoSolicitud
--
+ descripcion(String d): SolicitudDeEliminacionBuilder
+ hecho(Hecho h): SolicitudDeEliminacionBuilder
+ solicitante(Contribuyente s): SolicitudDeEliminacionBuilder
+ build(): SolicitudDeEliminacion
}





class ContenidoMultimedia{
- id: Long
- pathImagen: String
}

class Criterio{
- id: Long
- filtros: List<Filtro>
--
+ addFiltro(Filtro filtro): Criterio
+ aplicarA(List<Hecho> listaOriginal): List<Hecho>
}

abstract class Filtro{
- id: Long
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorEliminados{
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorCategoria{
- categoria : Categoria
--
+ aplicar(List<Hecho> hechos): List<Hecho>
}

class FiltroPorDescripcion{
- descripcion : String
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorFechaDeCarga{
- desde : LocalDateTime
- hasta : LocalDateTime
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorFechaHecho{
- desde : LocalDate
- hasta : LocalDate
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorTitulo{
- titulo : String
--
+  aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorUbicacion{
- lugar : Coordenada
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class SolicitudDeEliminacion{
- id: Long
- descripcion: String
- hecho: Hecho
- fechaDeCarga: LocalDateTime
- fechaDeResolucion: LocalDateTime
- estado: EstadoSolicitud
- solicitante: Contribuyente
- administradorQueResolvio: Administrador
- CANT_MINIMA_DE_CARACTERES: int = 500
--
+ resolver(Estado estado, Administrador administrador): void
}

enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    SUGERIDO_A_CAMBIO
    RECHAZADA
    ACEPTADA_CON_SUGERENCIA
    RECHAZADA_POR_SPAM
    RECHAZADA_POR_FALTA_DE_CARACTERES
}

abstract class AlgoritmoDeConsenso{
+ abstract aplicarA(List<Hecho> hechos, List<String> fuentes): List<Hecho>
+ sinDuplicados(List<Hecho> hechos): List<Hecho>
+ sinContradiccion(List<Hecho> hechos, List<String> fuentes): List<Hecho>
+ consensuar(List<Hecho> hechos, List<String> fuentes): List<Hecho>
}

class ConsensoAbsoluta{
+ aplicarA(List<Hecho> hechosColeccion, List<String> fuentesColeccion): List<Hecho>
}

class ConsensoMayoriaSimple{
+ aplicarA(List<Hecho> hechosColeccion, List<String> fuentesColeccion): List<Hecho>
}

class ConsensoMultiplesMenciones{
+ aplicarA(List<Hecho> hechosColeccion, List<String> fuentesColeccion) : List<Hecho>
}


class Coordenada{
- latitud: Double
- longitud: Double
--
+ comoArray(): Double[]
}

class Administrador{
- id: Long
- nombre: String
- apellido: String
}

class Contribuyente{
- id: Long
- nombre: String
- apellido: String
- fechaNacimiento: LocalDate
}

class CriterioCambiadoEvent{
- coleccion: Coleccion
}

class FuentesCambiadasEnColeccionEvent{
- coleccion: Coleccion
- fuentesCambiadas: List<String>
}

class HechoEliminadoEvent{
- hechoEliminado: Hecho
}

class HechosModificadosEvent{
- hechos: List<Hecho>
}


CriterioCambiadoEvent --> Coleccion
FuentesCambiadasEnColeccionEvent --> Coleccion
HechoEliminadoEvent --> Hecho
HechosModificadosEvent -->"*" Hecho



Hecho -u-> Categoria
Hecho --> Coordenada
Hecho -->"*" SolicitudDeEliminacion
Hecho --> "*"ContenidoMultimedia
Hecho -r-> OrigenHecho
Hecho -->"*" Etiqueta
Hecho --> Contribuyente

Coleccion --> Criterio
Coleccion -->"*" Hecho

Criterio ..> Hecho
Criterio -->"*" Filtro

FiltroPorCategoria -u-|> Filtro
FiltroPorDescripcion -u-|> Filtro
FiltroPorEliminados -u-|> Filtro
FiltroPorFechaDeCarga -u-|> Filtro
FiltroPorFechaHecho -u-|> Filtro
FiltroPorTitulo -u-|> Filtro
FiltroPorUbicacion -u-|> Filtro

SolicitudDeEliminacion --> Hecho
SolicitudDeEliminacion -d-> EstadoSolicitud
SolicitudDeEliminacion --> Contribuyente
SolicitudDeEliminacion --> Administrador

Coleccion -u-> AlgoritmoDeConsenso
ConsensoAbsoluta -u-|> AlgoritmoDeConsenso
ConsensoMayoriaSimple -u-|> AlgoritmoDeConsenso
ConsensoMultiplesMenciones -u-|> AlgoritmoDeConsenso

SolicitudDeEliminacionBuilder --> Hecho
SolicitudDeEliminacionBuilder --> Contribuyente
SolicitudDeEliminacionBuilder --> EstadoSolicitud
SolicitudDeEliminacionBuilder ..> SolicitudDeEliminacion

@enduml